# ShortsGenerator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  actor_config.yaml  config_example.yaml  pyproject.toml
.github/workflows/: main.yml
scripts/: generate_shorts.py
shorts_generator/: generator.py  shorts_generator.py  workspace.py
shorts_generator/configs/: actor.py  voice.py
shorts_generator/generators/: __init__.py  actor.py  audio.py  image.py  script.py  util.py  video.py
tests/: conftest.py  test_shorts_generator.py  test_workspace.py
tests/configs/: test_actor.py  test_voice.py
tests/generators/: test_actor.py  test_audio.py  test_image.py  test_script.py  test_util.py  test_video.py  test_voice.py
